Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107602

qdoc: Links inside \section titles lead to broken table of contents

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.5.0 Beta1
    • 6.4
    • Build tools: qdoc
    • None
    • 3f5f00caf2 (qt/qttools/dev) 3f5f00caf2 (qt/tqtc-qttools/dev)
    • DaVinci 65

    Description

      Case in point;

      https://doc.qt.io/archives/qt-5.14/qmodelindex-and-related-classes-in-qml.html

      -> see section 'QItemSelectionRange Type' in the Contents

      written as

      \section1 \l QItemSelectionRange Type
      

      The link goes to the type QItemSelectionRange documentation and not the section on the page. This is visible better in the old style (archived), as the conversion to the new style partially masks the issue but doesn't fully fix it.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              treinio Topi Reiniƶ
              treinio Topi Reiniƶ
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There is 1 open Gerrit change